// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`HeroSection > renders default as expected 1`] = `
<div>
  <div
    class="bg-bluedot-darker flex flex-row justify-center items-center w-full px-spacing-x"
  >
    <div
      class="max-w-[920px] py-12"
    />
  </div>
</div>
`;

exports[`HeroSection > renders with buttons 1`] = `
<div>
  <div
    class="bg-bluedot-darker flex flex-row justify-center items-center w-full px-spacing-x"
  >
    <div
      class="max-w-[920px] py-12"
    >
      <h1
        class="bluedot-h1 text-white text-center text-size-2xl lg:text-size-3xl xl:text-size-4xl leading-tight font-normal tracking-tighter"
      >
        This is the title
      </h1>
      <div
        class="flex justify-center mt-8"
      >
        <a
          class="cta-button flex items-center justify-center transition-all duration-200 w-fit whitespace-nowrap cursor-pointer not-prose disabled:opacity-50 disabled:pointer-events-none aria-disabled:opacity-50 aria-disabled:pointer-events-none text-size-sm bd-md:text-size-xs px-4 py-3 rounded-sm font-semibold cta-button--primary bg-bluedot-normal link-on-dark"
          href="https://example.com"
          tabindex="0"
        >
          Do a thing
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`HeroSection > renders with optional yield 1`] = `
<div>
  <div
    class="bg-bluedot-darker flex flex-row justify-center items-center w-full px-spacing-x"
  >
    <div
      class="max-w-[920px] py-12"
    >
      <p>
        This is the yield
      </p>
    </div>
  </div>
</div>
`;

exports[`HeroSection > renders with titles 1`] = `
<div>
  <div
    class="bg-bluedot-darker flex flex-row justify-center items-center w-full px-spacing-x"
  >
    <div
      class="max-w-[920px] py-12"
    >
      <h1
        class="bluedot-h1 text-white text-center text-size-2xl lg:text-size-3xl xl:text-size-4xl leading-tight font-normal tracking-tighter"
      >
        This is the title
      </h1>
    </div>
  </div>
</div>
`;
